# mowidgets

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
examples/basic/: app.py  file_browser.py  multiply.py
src/mowidgets/: __init__.py  _widget.py
